@@ -2,6 +2,7 @@ package com.project.ecommerce.domain.product.service.impl;
 
 import com.project.ecommerce.common.exception.BusinessException;
 import com.project.ecommerce.domain.dto.order.ProductOptionDto;
+import com.project.ecommerce.domain.product.entity.Inventory;
 import com.project.ecommerce.domain.product.entity.ProductOption;
 import com.project.ecommerce.domain.product.repository.ProductsOptionRepository;
 import com.project.ecommerce.presentation.order.dto.request.CartOrderRequestDto;
@@ -15,6 +16,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -35,12 +37,25 @@ public class ProductsServiceImpl implements ProductsService {
     }
 
     @Override
+    public Products getProductsInfo(Long id) {
+        return productsRepository.findById(id).orElseThrow(() -> BusinessException.notFound("상품이 존재하지 않습니다."));
+    }
+
+    @Override
     public List<ProductsResponseDto> getProductsData() {
         List<Products> products = productsRepository.findAll();
 
         return products.stream()
-                .map(ProductsResponseDto::from)
-                .collect(Collectors.toList());
+                .map(pro -> {
+                    int totalStock = pro.getTotalStock();
+
+                    return ProductsResponseDto.builder()
+                            .id(pro.getId())
+                            .productName(pro.getProductName())
+                            .price(pro.getPrice())
+                            .stock(totalStock)
+                            .build();
+                }).toList();
     }
 
     @Transactional
